Add Core application layer, tests projects for both Core and WebApi

--- a/Accounts.WebApi/Accounts.WebApi.csproj
+++ b/Accounts.WebApi/Accounts.WebApi.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="NSwag.AspNetCore" Version="14.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Accounts.Core\Accounts.Core.csproj" />
+  </ItemGroup>
+
 </Project>
